[tool.poetry]
name = "kraftpunk-bot"
version = "1.0.0"
description = ""
authors = ["Turner Vink <turner.vink@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^10.4.0"
py-cord = "^2.6.0"
parsedatetime = "^2.6"
psycopg2-binary = "^2.9.9"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
